// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should match snapshot when loading 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  entrySearchValue="road"
  isSearchLoading={true}
  mapToProps={[Function]}
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`SearchBar should match snapshot when not loading 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  entrySearchValue="road"
  isSearchLoading={false}
  mapToProps={[Function]}
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;
